--- a/gadget.html
+++ b/gadget.html
@@ -47,15 +47,15 @@
 
     <section class="grid2" style="margin-top:16px;">
       <article class="card">
-        <h2>Set penne / marker (placeholder)</h2>
+        <h2>Set penne / marker (in arrivo)</h2>
         <p class="muted small">Descrizione breve • per chi è • cosa include</p>
-        <a class="btn" href="#" target="_blank" rel="noopener">Compra</a>
+        <a class="btn" href="#">Compra</a>
       </article>
 
       <article class="card">
-        <h2>Quaderno / sketchbook (placeholder)</h2>
-        <p class="muted small">Copertina personalizzata • fogli interni</p>
-        <a class="btn" href="#" target="_blank" rel="noopener">Compra</a>
+        <h2>Quaderno / Sketchbook — Coloring Journal</h2>
+        <p class="muted small">Copertina manga • pagine bianche per disegno e appunti</p>
+        <a class="btn" href="quaderno-coloring-journal.html">Compra</a>
       </article>
     </section>
   </main>
