--- a/quaderno-coloring-journal.html
+++ b/quaderno-coloring-journal.html
@@ -37,26 +37,40 @@
   <div class="backdrop" id="backdrop"></div>
 
   <main class="container">
+
     <section class="card">
       <h1>Coloring Journal (Spiral) — Copertina Manga</h1>
       <p class="muted">
-        <strong>🚧 Prodotto in fase di lancio.</strong> Questa pagina serve per mostrare il progetto e raccogliere feedback.
-        Il bottone “Compra” verrà attivato quando colleghiamo un canale di vendita (Etsy/Pop‑Up/Shopify) oppure un checkout esterno.
+        <strong>🚧 Prodotto in fase di lancio.</strong><br>
+        Questa pagina serve per mostrare il progetto e raccogliere feedback.
+        Il bottone “Compra” verrà attivato quando collegherò un canale di vendita
+        (Etsy / Pop-Up / altro).
       </p>
 
       <div class="btnrow" style="margin-top:12px;">
-        <!-- Sostituisci # con il link reale del tuo Instagram -->
-        <a class="btn" href="#" target="_blank" rel="noopener">Scrivimi su Instagram</a>
+        <a class="btn"
+           href="https://www.instagram.com/silverartlab91/"
+           target="_blank"
+           rel="noopener">
+          Scrivimi su Instagram
+        </a>
         <a class="btn btn--ghost" href="gadget.html">Torna ai Gadget</a>
       </div>
     </section>
 
     <section class="grid2" style="margin-top:16px;">
+
       <article class="card">
         <h2>Anteprima copertina</h2>
-        <p class="muted small">Immagine reale della copertina (stile manga, personaggi originali).</p>
+        <p class="muted small">
+          Immagine reale della copertina (stile manga, personaggi originali).
+        </p>
+
         <div class="artframe" style="margin-top:12px;">
-          <img src="Copertina.png" alt="Copertina Coloring Journal — Silver Art Lab" style="width:100%; height:auto; display:block; border-radius:18px;">
+          <img
+            src="Copertina.png"
+            alt="Copertina Coloring Journal — Silver Art Lab"
+            style="width:100%; height:auto; display:block; border-radius:18px;">
         </div>
       </article>
 
@@ -64,33 +78,40 @@
         <h2>Dettagli rapidi</h2>
         <ul class="muted small" style="line-height:1.6; margin-top:10px;">
           <li><strong>Formato:</strong> quaderno spiralato</li>
-          <li><strong>Pagine interne:</strong> <strong>bianche</strong> (perfette per disegno, sketch, note, lettering)</li>
+          <li><strong>Pagine interne:</strong> <strong>bianche</strong> (disegno, sketch, lettering)</li>
           <li><strong>Carta:</strong> 90gsm • 160 pagine (80 fogli)</li>
-          <li><strong>Copertina:</strong> stampa a colori • finitura semi‑gloss</li>
+          <li><strong>Copertina:</strong> stampa a colori • semi-gloss</li>
           <li><strong>Uso:</strong> creativo / journaling / sketchbook</li>
         </ul>
 
         <div class="card" style="margin-top:14px; padding:14px;">
           <strong>Vuoi essere tra i primi?</strong>
           <p class="muted small" style="margin-top:6px;">
-            Mandami un DM su Instagram con scritto: <em>“Voglio il Coloring Journal”</em>.
+            Mandami un DM su Instagram con scritto:
+            <em>“Voglio il Coloring Journal”</em>.<br>
             Ti avviso appena apro gli ordini.
           </p>
         </div>
       </article>
+
     </section>
 
     <section class="card" style="margin-top:16px;">
       <h2>Domande veloci</h2>
+
       <p class="muted">
         <strong>Perché non posso comprare subito?</strong><br>
-        Sto validando l’idea: prima raccolgo interesse e feedback, poi apro il canale di vendita più comodo.
+        Sto validando l’idea: prima raccolgo interesse e feedback,
+        poi apro il canale di vendita più comodo.
       </p>
+
       <p class="muted">
         <strong>Le pagine sono a righe?</strong><br>
-        No: in questa versione sono <strong>pagine bianche</strong>. Se vuoi una versione a righe/quadrini, dimmelo: la preparo come variante.
+        No: in questa versione sono <strong>pagine bianche</strong>.
+        Se vuoi righe o quadretti, lo preparo come variante.
       </p>
     </section>
+
   </main>
 
   <script src="script.js"></script>
