--- a/digital.html
+++ b/digital.html
@@ -51,8 +51,8 @@
         <h2>PDF da colorare (in arrivo)</h2>
         <p class="muted small">Esempi: mandala, animali cute, paesaggi, line art semplice.</p>
         <div class="btnrow">
-          <a class="btn" href="#" target="_blank" rel="noopener">Compra (placeholder)</a>
-          <a class="btn btn--ghost" href="#" target="_blank" rel="noopener">Anteprima (placeholder)</a>
+          <span class="btn btn--disabled">Compra (placeholder)</span>
+          <span class="btn btn--ghost btn--disabled">Anteprima (placeholder)</span>
         </div>
       </article>
 
@@ -60,8 +60,8 @@
         <h2>Libri digitali (in arrivo)</h2>
         <p class="muted small">Ebook/PDF: lettura offline, capitoli brevi.</p>
         <div class="btnrow">
-          <a class="btn" href="#" target="_blank" rel="noopener">Compra (placeholder)</a>
-          <a class="btn btn--ghost" href="#" target="_blank" rel="noopener">Indice (placeholder)</a>
+          <span class="btn btn--disabled">Compra (placeholder)</span>
+          <span class="btn btn--ghost btn--disabled">Indice (placeholder)</span>
         </div>
       </article>
     </section>
