--- a/gadget.html
+++ b/gadget.html
@@ -49,7 +49,7 @@
       <article class="card">
         <h2>Set penne / marker (in arrivo)</h2>
         <p class="muted small">Descrizione breve • per chi è • cosa include</p>
-        <a class="btn" href="#">Compra</a>
+        <span class="btn btn--disabled">In arrivo</span>
       </article>
 
       <article class="card">
