--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </p>
 
         <div class="btnrow">
-          <a class="btn" href="#" target="_blank" rel="noopener">Google Play (presto)</a>
-          <a class="btn btn--ghost" href="#" target="_blank" rel="noopener">App Store (presto)</a>
+          <span class="btn btn--disabled">Google Play (presto)</span>
+          <span class="btn btn--ghost btn--disabled">App Store (presto)</span>
         </div>
       </div>
 
