--- a/quaderno-coloring-journal.html
+++ b/quaderno-coloring-journal.html
@@ -49,10 +49,10 @@
 
       <div class="btnrow" style="margin-top:12px;">
         <a class="btn"
-           href="https://www.instagram.com/silverartlab91/"
+           href="https://www.instagram.com/direct/new/?username=silverartlab91"
            target="_blank"
            rel="noopener">
-          Scrivimi su Instagram
+          Scrivimi in DM su Instagram
         </a>
         <a class="btn btn--ghost" href="gadget.html">Torna ai Gadget</a>
       </div>
@@ -88,8 +88,8 @@
           <strong>Vuoi essere tra i primi?</strong>
           <p class="muted small" style="margin-top:6px;">
             Mandami un DM su Instagram con scritto:
-            <em>“Voglio il Coloring Journal”</em>.<br>
-            Ti avviso appena apro gli ordini.
+            <strong>“JOURNAL”</strong>.<br>
+            Ti mando prezzo stimato + tempi + ti chiedo 2 feedback (30 secondi).
           </p>
         </div>
       </article>
