--- a/quaderno-coloring-journal.html
+++ b/quaderno-coloring-journal.html
@@ -47,13 +47,22 @@
         (Etsy / Pop-Up / altro).
       </p>
 
+      
       <div class="btnrow" style="margin-top:12px;">
         <a class="btn"
+           href="https://www.instagram.com/silverartlab91/"
+           target="_blank"
+           rel="noopener">
+          Apri Instagram
+        </a>
+
+        <a class="btn btn--ghost"
            href="https://www.instagram.com/direct/new/?username=silverartlab91"
            target="_blank"
            rel="noopener">
-          Scrivimi in DM su Instagram
+          DM diretto (browser)
         </a>
+
         <a class="btn btn--ghost" href="gadget.html">Torna ai Gadget</a>
       </div>
     </section>
